<resources>
    <string name="app_name">Save It</string>
    <string name="txtRestaurantName">A restaurant</string>
    <string name="RestaurantName">Enter the name of the Restuarent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTotal">total</string>
    <string name="btnOrder">order</string>
    <string name="txtDefaultTotal">$0</string>
    <string name="txtOrderSummary">Order Summary</string>
    <string name="txtDeliveryOptions">Delivery Option</string>
    <string name="radioOption1">Pick-up</string>
    <string name="radioOption2">Delivery</string>
    <string name="txtAddress">Address</string>
    <string name="hintStreet">Street#</string>
    <string name="hintCity">City</string>
    <string name="hintPostalCode">Postal Code</string>
    <string name="btnConfirmOrder">Confirm Order</string>
    <string name="txtCurrentOrders">Current Orders</string>
    <string name="btnGenerateReport">Generate Report</string>
    <string name="txtOrderId">Order ID:</string>
    <string name="txtCustomer">Customer:</string>
    <string name="txtDate">mm/dd/yyyy</string>
    <string name="txtCompleted">Completed</string>
    <string name="txtDate2">Order made on:</string>
    <string name="btn_city1">Surrey</string>
    <string name="btn_city2">New West</string>
    <string name="btn_city3">Richmond</string>
    <string name="btn_city4">Burnaby</string>
    <string name="btn_city_search">Search</string>
    <string name="favoriteRestraunts">Favourite Restraunts</string>
    <string name="thankYou">Thank You</string>
    <string name="orderId">Order ID:</string>
    <string name="restaurantName">RestaurantName: </string>
    <string name="address">Address: </string>
    <string name="status">Status: </string>
    <string name="total">Total- </string>
    <string name="backToTheRestaurant">Back to the Restaurant</string>
    <string name="odersHistory">Orders History</string>
    <string name="date">Date</string>
    <string name="bundles">Bundles</string>
    <string name="orderStatus">Order Status: </string>
    <string name="txtTitle">SAVE IT!</string>
    <string name="txtWelcome">Welcome</string>
    <string name="txtManagerName">Manager Name!</string>
    <string name="btnManageBundles">Manage Food Bundles</string>
    <string name="txtImage">An Image</string>
    <string name="btnCustomerOrders">Customer Orders</string>
    <string name="addTitle">Add Food Bundle</string>
    <string name="lblBundle">Bundle</string>
    <string name="hintBundleName">Bundle Name</string>
    <string name="lblItems">Items</string>
    <string name="addButton">Add</string>
    <string name="btnSave">Save</string>
    <string name="hintItemDescription">Item Description</string>
    <string name="lblPrice">Price</string>
    <string name="hintPrice">Price</string>
    <string name="btnFoodBundles">Your food bundles</string>
    <string name="lblYourFoodBundles">Your Food Bundles</string>
    <string name="txtBundleID">Bundle ID: </string>
    <string name="txtItems">Items</string>
    <string name="txtListItems">Item 1 Item 2</string>
    <string name="txtPrice">Price:</string>
    <string name="btnAddBundles">Add Bundles</string>
    <string name="btnDeleteSelected">Delete Selected</string>
    <string name="passwordInput">Enter your password</string>
    <string name="emailInput">Enter your Email here</string>
    <string name="btnLabelLogin">LOGIN</string>
    <string name="RegisterHere">Click here to register.!</string>
    <string name="Zipcode">Zipcode</string>
    <string name="City">City</string>
    <string name="Street">Street</string>
    <string name="txtemail">Enter your Email</string>
    <string name="name">Enter your Name</string>
    <string name="password">Enter your Password</string>
    <string name="phone">Enter your Phone Number</string>
    <string name="Register">REGISTER</string>
    <string name="managerREgister">Click here to register as a manager</string>
    <string name="txtStart">Start Time</string>
    <string name="txtEndTIme">End Time</string>
    <string name="txtAddressLabel">Address details</string>
    <string name="txtAddressLAbel">Address details</string>
    <string name="nameLabel">Name</string>
    <string name="phoneLabel">Phone</string>
    <string name="labelPassword">Password</string>
    <string name="lemail">Email</string>
    <string name="city">City</string>

    <string name="street">Street</string>
    <string name="zipcode">Zipcode</string>
    <string name="btnLogout">LOGOUT</string>
    <string name="edTxtStreetHint">Enter your street</string>
    <string name="btnEdit">Edit</string>
    <string name="edTxtStartTime">Enter your start time</string>
    <string name="edTxtEndTime">Enter your end time</string>
    <string name="txtWelcomeSplash">Welcome to Save It!</string>


</resources>