<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/customer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtCustomer"
        app:layout_constraintStart_toStartOf="@+id/orderID2"
        app:layout_constraintTop_toBottomOf="@+id/orderID2" />

    <TextView
        android:id="@+id/orderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/txtDate"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <TextView
        android:id="@+id/customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/txtCustomer"
        app:layout_constraintBottom_toTopOf="@+id/deliveryType"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderID2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtOrderId"
        app:layout_constraintStart_toStartOf="@+id/orderDate"
        app:layout_constraintTop_toBottomOf="@+id/orderDate" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txtDate2"
        app:layout_constraintBottom_toTopOf="@+id/orderId"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txtOrderId"
        app:layout_constraintBottom_toTopOf="@+id/customer"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/sendReminderBtn"
        android:layout_width="51dp"
        android:layout_height="59dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderDate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <CheckBox
        android:id="@+id/completedCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="14dp"
        android:text="@string/txtCompleted"
        app:layout_constraintBottom_toTopOf="@+id/orderedBundles"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/hintCity"
        app:layout_constraintStart_toStartOf="@+id/deliveryType2"
        app:layout_constraintTop_toBottomOf="@+id/deliveryType2" />

    <TextView
        android:id="@+id/deliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txtAddress"
        app:layout_constraintBottom_toTopOf="@+id/completedCheck"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="13dp"
        android:text="@string/txtDeliveryOptions"
        app:layout_constraintBottom_toTopOf="@+id/deliveryAddress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/radioOption1"
        app:layout_constraintStart_toStartOf="@+id/customer2"
        app:layout_constraintTop_toBottomOf="@+id/customer2" />

    <ListView
        android:id="@+id/orderedBundles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/food_bundle_subitem" />

</androidx.constraintlayout.widget.ConstraintLayout>